--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <link
+      rel="shortcut icon"
+      href="./src/assets/images/logo_website.png"
+      type="image/x-icon"
+    />
+    <title>The Box</title>
   </head>
   <body>
     <div id="root"></div>
