--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta
             name="description"
-            content="statice site developed with scss and typescript"
+            content="statice site developed with scss and typescript by M.Yousaf"
         />
-        <title>TheBoxApp</title>
+        <title>TheBox</title>
     </head>
     <body>
         <div id="root"></div>
