--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             name="description"
             content="statice site developed with scss and typescript by M.Yousaf"
         />
-        <title>TheBox</title>
+        <title>TheBox | Leading Construction Company</title>
     </head>
     <body>
         <div id="root"></div>
